fixed overlapping title

--- a/src/components/list/List.css
+++ b/src/components/list/List.css
@@ -34,6 +34,7 @@
 
 .list-wrapper .card-title {
     font-size: 16px;
+    padding-right: 15px
 }
 
 .list-wrapper .card-image {
